[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://culinary/BurgerFlip.gd" type="Script" id=2]
[ext_resource path="res://culinary/AssembleBurger.gd" type="Script" id=3]
[ext_resource path="res://culinary/BurgerMaker.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CulinaryGame" type="Node2D"]

[node name="BurgerFlip" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="FlipBurger" type="Button" parent="BurgerFlip"]
margin_left = 18.0
margin_top = 10.0
margin_right = 94.0
margin_bottom = 80.0
icon = ExtResource( 1 )

[node name="BurgerCookProgress" type="ProgressBar" parent="BurgerFlip"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = 89.0
margin_right = 87.0
margin_bottom = 109.0
rect_rotation = -90.0
rounded = true
percent_visible = false

[node name="BurgerOvercookProgress" type="ProgressBar" parent="BurgerFlip"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = 89.0
margin_right = 87.0
margin_bottom = 109.0
rect_rotation = -90.0
rounded = true
percent_visible = false

[node name="CookingProgress" type="AnimatedSprite" parent="BurgerFlip"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 27, 18 )
scale = Vector2( 0.267469, 0.265346 )
frames = SubResource( 1 )

[node name="AssembleBurger" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="BurgerPart" type="TextureButton" parent="AssembleBurger" groups=["Lettuce"]]
modulate = Color( 0.0156863, 1, 0.00784314, 1 )
margin_left = 163.0
margin_top = 9.0
margin_right = 227.0
margin_bottom = 73.0
rect_scale = Vector2( 0.161566, 0.161231 )
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )

[node name="BurgerPart2" type="TextureButton" parent="AssembleBurger" groups=["Tomato"]]
modulate = Color( 1, 0.00784314, 0.00784314, 1 )
margin_left = 109.0
margin_top = 10.0
margin_right = 173.0
margin_bottom = 74.0
rect_scale = Vector2( 0.161566, 0.161231 )
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )

[node name="BurgerMaker" type="TextureButton" parent="AssembleBurger" groups=["BurgerMaker"]]
margin_left = 128.0
margin_top = 37.0
margin_right = 192.0
margin_bottom = 101.0
rect_scale = Vector2( 0.270572, 0.249728 )
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )

[connection signal="burgerDone" from="BurgerFlip" to="AssembleBurger" method="_on_BurgerFlip_burgerDone"]
[connection signal="button_down" from="BurgerFlip/FlipBurger" to="BurgerFlip" method="_on_FlipBurger_button_down"]
[connection signal="burgerItemAdd" from="AssembleBurger/BurgerMaker" to="AssembleBurger" method="_on_BurgerMaker_burgerItemAdd"]
